@@ -46,18 +46,29 @@ error    = modules.messages.error;
 warning  = modules.messages.warning;
 
 // (1.3) functions that are accessed after applying prules
-if_fn      = modules.core.if_fn;
+if_fn      = modules.core.if_fn; 
 fn_fn      = modules.core.fn_fn;
 macro_fn   = modules.core.macro_fn;
-for_fn     = modules.core.for_fn;
+for_fn     = modules.core.for_fn; 
 while_fn   = modules.core.while_fn;
-try_fn     = modules.core.try_fn;
+try_fn     = modules.core.try_fn; 
 literal    = modules.core.literal;
 return_fn  = modules.core.return_fn;
 deliver_fn = modules.core.deliver_fn;
-break_fn   = modules.core.break_fn;
+break_fn   = modules.core.break_fn; 
 throw_fn   = modules.core.throw_fn;
 print      = modules.object.print_fn;
+
+// take care of 'syntactic functions', which generate no frame to return from
+no_frame(f) = (f.fn_data.no_frame = true);
+no_frame(if_fn);
+no_frame(for_fn);
+no_frame(while_fn);
+no_frame(try_fn);
+no_frame(return_fn);
+no_frame(deliver_fn);
+no_frame(break_fn);
+no_frame(throw_fn);
 
 // (1.4) proxy and other useful stuff
 proxy = fn (s) root.modules.core.proxy_fn(this, s);
@@ -212,6 +223,7 @@ times_fn(type:t1, type:t2) = {
 }
 
 
+//----------------------------------------------------------------------
 // integers
 plus_fn(int:x, int:y) = modules.int_fn.int_plus(x, y);
 neg_fn(int:x) = modules.int_fn.int_neg(x);
@@ -226,6 +238,7 @@ int(real:x) = modules.int_fn.int_cast(x);  // try 'int(3.14)'
 //equalequal_fn(int:x, int:y) = modules.int_fn.int_equalequal(x, y);
 
 
+//----------------------------------------------------------------------
 // tuples
 tuple(int:len) = modules.tuple_fn.tuple_new(len);
 tuple(list:l) = modules.list_fn.list_to_tuple(l);
@@ -271,6 +284,7 @@ tuple.proto.extend = fn (signature, scope, rhs) {
   return value;
 }
 
+//----------------------------------------------------------------------
 // lists
 list() = modules.list_fn.list_new();
 list(tuple:t) = modules.tuple_fn.tuple_to_list(t);
